Corrected NHM_INTERVAL comment.

--- a/nhm.env
+++ b/nhm.env
@@ -39,5 +39,5 @@ GRIDMET_DISABLE=false
 # pipeline run-time to a point where interactive testing is
 # feasible. Format is ISO 8601 time interval
 # (https://en.wikipedia.org/wiki/ISO_8601#Time_intervals). Set to
-# 2019-08-21/2019-08-22019-08-21/2019-08-222 presently, if/when needed.
+# 2019-08-21/2019-08-22 presently, if/when needed.
 NHM_INTERVAL=
