Restored "volumes" directive to nhm-prms service from master branch.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
     container_name: nhm-prms
     env_file:
       - nhm.env
+    volumes:
+      - nhm:/var/lib/nhm
 
   out2ncf:
     build:
