--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -14,8 +14,8 @@ RUN if wget http://sslhelp.doi.net/docs/DOIRootCA2.cer; then \
        # https://stackoverflow.com/questions/33699577/conda-update-failed-ssl-error-ssl-certificate-verify-failed-certificate-ver
        conda config --set ssl_verify DOIRootCA2.cer ; \
        # this shouldn't be necessary, but for reasons unknown,
-       # "conda install ..." (below) appears to be unaffected by the
-       # "conda config ..." command above
+       # "conda update ..." and "conda install ..." (below) appears to
+       # be unaffected by the "conda config ..." command above
        insecure=-k ; \
        # see
        # https://stackoverflow.com/questions/9072376/configure-git-to-accept-a-particular-self-signed-server-certificate-for-a-partic
@@ -23,8 +23,8 @@ RUN if wget http://sslhelp.doi.net/docs/DOIRootCA2.cer; then \
     fi
 
 # Update/upgrade Conda
-RUN conda update -n base conda -y && \
-    conda install -n base -c defaults -c conda-forge $insecure \
+RUN conda update -n base conda -y
+RUN conda install -n base -c defaults -c conda-forge -k \
       python=3.6 \
       bottleneck=1.2.1 \
       cartopy=0.17.0 \
@@ -40,8 +40,8 @@ RUN conda update -n base conda -y && \
       rasterstats=0.13.1 \
       scipy=1.3.1 \
       xarray=0.13.0 \
-      xmltodict=0.12.0 && \
-    conda clean -a
+      xmltodict=0.12.0
+RUN conda clean -a
 
 ENV SOURCE_DIR=/usr/local/src
 
