Added "args" directive under "build" in base_image service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   base_image:
     build: 
       context: ./nhmusgs-base
+      args:
+        doi_root_cert: "false"
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=Base Image"
