Re-factored "doi_root_cert" ARG into "insecure" ARG.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: 
       context: ./nhmusgs-base
       args:
-        doi_root_cert: "false"
+        insecure: "-k"
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=Base Image"
