Re-factored DOI root SSL cert. code.

--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -8,23 +8,20 @@ RUN apt-get update && \
     apt-get -y install dialog file gcc gfortran make procps unzip && \
     apt-get autoclean && apt-get purge
 
-ARG doi_root_cert
-RUN if test $doi_root_cert = true ; then \
+# It should only be necessary to set this to "-k" (the
+# "conda update/install ..." option) at certain installations in
+# .usgs.gov where the DOI root SSL certificate has not been installed
+# (e.g., on a VM).
+ARG insecure
+RUN if [ "$insecure" = -k ]; then \
        wget http://sslhelp.doi.net/docs/DOIRootCA2.cer ; \
-       # see
-       # https://stackoverflow.com/questions/33699577/conda-update-failed-ssl-error-ssl-certificate-verify-failed-certificate-ver
-       conda config --set ssl_verify DOIRootCA2.cer ; \
-       # this shouldn't be necessary, but for reasons unknown,
-       # "conda update ..." and "conda install ..." (below) appears to
-       # be unaffected by the "conda config ..." command above
-       insecure=-k ; \
        # see
        # https://stackoverflow.com/questions/9072376/configure-git-to-accept-a-particular-self-signed-server-certificate-for-a-partic
        git config --global http.sslCAInfo DOIRootCA2.cer ; \
     fi
 
 # Update/upgrade Conda
-RUN conda update -n base conda -y
+RUN conda update -n base conda -y $insecure
 RUN conda install -n base -c defaults -c conda-forge $insecure \
       python=3.6 \
       bottleneck=1.2.1 \
