--- a/nhm.env
+++ b/nhm.env
@@ -40,4 +40,4 @@ GRIDMET_DISABLE=false
 # feasible. Format is ISO 8601 time interval
 # (https://en.wikipedia.org/wiki/ISO_8601#Time_intervals). Set to
 # 2019-08-21/2019-08-22 presently, if/when needed.
-NHM_INTERVAL=2019-08-21/2019-08-22
+NHM_INTERVAL=
