Added "datadir" arg to build section of base_image service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     build: 
       context: ./nhmusgs-base
       args:
+        datadir: "/var/lib/nhm"
         insecure: "-k"
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
