--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: ./nhmusgs-base
       args:
         datadir: "/var/lib/nhm"
-        insecure: "-k"
+        insecure: ""
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=Base Image"
