--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -5,7 +5,7 @@ LABEL maintainer="ashalper@usgs.gov"
 ARG VERSION_TAG_GRIDMET=v0.1.6
 
 # check out source from repo.
-RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
+RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
     $SOURCE_DIR/onhm-fetcher-parser
 
