Replaced references to /var/lib/nhm with /nhm.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   gridmet:
     build:
@@ -58,7 +58,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   ncf2cbh:
     build:
@@ -71,7 +71,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   nhm-prms:
     build:
@@ -84,7 +84,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   out2ncf:
     build:
@@ -97,7 +97,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   verifier:
     build:
@@ -110,7 +110,7 @@ services:
     env_file:
       - nhm.env
     volumes:
-      - nhm:/var/lib/nhm
+      - nhm:/nhm
 
   thredds:
     image: unidata/thredds-docker:4.6.13
