--- a/nhmusgs-ncf2cbh/Dockerfile
+++ b/nhmusgs-ncf2cbh/Dockerfile
@@ -9,4 +9,4 @@ WORKDIR /home/$USER
 ENV NUMDAYS=60
 
 ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/ncf2cbh/ncf2cbh.py"]
+  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/ncf2cbh/ncf2cbh.py", "/nhm/NHM-PRMS_CONUS/input/"]
