--- a/nhmusgs-nhm-out2ncf/Dockerfile
+++ b/nhmusgs-nhm-out2ncf/Dockerfile
@@ -9,4 +9,4 @@ WORKDIR /home/$USER
 ENV NUMDAYS=60
 
 ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/out2ncf/prms_outputs2_ncf.py"]
+  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/out2ncf/prms_outputs2_ncf.py", "/nhm/NHM-PRMS_CONUS/"]
