--- a/nhm.env
+++ b/nhm.env
@@ -7,6 +7,9 @@
 # Author - Andrew Halper
 #
 
+# path to Git-cloned source in containers
+SOURCE_DIR=/usr/local/src
+
 # name of HRU shapefile archive
 HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
 
