Replaced references to $SOURCE_DIR with $NHM_SOURCE_DIR.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -7,11 +7,11 @@ ARG VERSION_TAG_GRIDMET=v0.1.6
 # check out source from repo.
 RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
-    $SOURCE_DIR/onhm-fetcher-parser
+    $NHM_SOURCE_DIR/onhm-fetcher-parser
 
 USER $USER
 
-WORKDIR $SOURCE_DIR
+WORKDIR $NHM_SOURCE_DIR
 
 ENTRYPOINT \
   ["/opt/conda/bin/python", "-u", "onhm-fetcher-parser/pkg/Gridmet_current.py"]
