Added START_DATE & END_DATE.

--- a/nhm.env
+++ b/nhm.env
@@ -22,3 +22,5 @@ HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 # PRMS data file archive URL
 PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
 
+START_DATE=
+END_DATE=
