--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=PRMS"
     image: nhmusgs/nhm-prms
     container_name: nhm-prms
+    environment:
+      - ARGV
     env_file:
       - nhm.env
     volumes:
