--- a/nhm.env
+++ b/nhm.env
@@ -22,5 +22,8 @@ HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 # PRMS data file archive URL
 PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
 
+# Simulation interval. Presently used only in testing to diminish
+# pipeline run-time to a point where interactive testing is
+# feasible.
 START_DATE=
 END_DATE=
