Restored NHM_DRY_RUN environment variable and comments.

--- a/nhm.env
+++ b/nhm.env
@@ -27,3 +27,8 @@ PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DAT
 # feasible.
 START_DATE=
 END_DATE=
+
+# When "true", tell the Docker entry-point scripts to print values of
+# relevant environment variables to stdout, then exit, without running
+# data processing process in container. Useful for debugging.
+NHM_DRY_RUN=false
