Removed ARGV ENV declaration and removed $ARGV from ENTRYPOINT argument.

--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -24,6 +24,4 @@ USER $USER
 
 WORKDIR /home/$USER
 
-ENV ARGV=""
-
-ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/prms", "$ARGV"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/prms"]
