Added DIR, START_DATE, and END_DATE environment variables to:
nhm-prms service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,9 @@ services:
     image: nhmusgs/ofp
     container_name: ofp
     environment:
+      - DIR
       - START_DATE
       - END_DATE
-      - DIR
     env_file:
       - nhm.env
     volumes:
@@ -87,6 +87,9 @@ services:
     container_name: nhm-prms
     environment:
       - ARGV
+      - DIR
+      - START_DATE
+      - END_DATE
     env_file:
       - nhm.env
     volumes:
