Adjusted "environment" of nhm-prms service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,10 +86,10 @@ services:
     image: nhmusgs/nhm-prms
     container_name: nhm-prms
     environment:
-      - ARGV
-      - DIR
+      - NHM_SOURCE_DIR
       - START_DATE
-      - END_DATE
+      - START_TIME
+      - END_TIME
     env_file:
       - nhm.env
     volumes:
