Restored GRIDMET_DISABLE environment variable.

--- a/nhm.env
+++ b/nhm.env
@@ -22,6 +22,12 @@ HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 # PRMS data file archive URL
 PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
 
+# When "true", skip running the gridmet container. Up-to-date Gridmet
+# data is not typically available until ~2:00 p.m., so disabling the
+# gridmet container can be useful in development to prevent the
+# pipeline from stopping at this step with an error.
+GRIDMET_DISABLE=false
+
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
 # feasible.
