fix new restart date, added var SAVE_RESTART_DATE to nhmenv, and to run

--- a/nhm.env
+++ b/nhm.env
@@ -33,6 +33,7 @@ GRIDMET_DISABLE=false
 # feasible.
 START_DATE=
 END_DATE=
+SAVE_RESTART_DATE=
 
 # When "true", tell the Docker entry-point scripts to print values of
 # relevant environment variables to stdout, then exit, without running
