Replaced hard-coded volume source path with:
SOURCE environment variable in nhm.env, and updated references
accordingly.

--- a/nhm.env
+++ b/nhm.env
@@ -39,3 +39,9 @@ SAVE_RESTART_DATE=
 # relevant environment variables to stdout, then exit, without running
 # data processing process in container. Useful for debugging.
 NHM_DRY_RUN=false
+
+# Volume mount source (see
+# https://docs.docker.com/storage/volumes/). The default here is for
+# Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on
+# Docker.
+SOURCE=/caldera/projects/usgs/water/impd/$USER
