Added conditional around SOURCE default assignment.

--- a/nhm.env
+++ b/nhm.env
@@ -44,4 +44,6 @@ NHM_DRY_RUN=false
 # https://docs.docker.com/storage/volumes/). The default here is for
 # Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on
 # Docker.
-SOURCE=/caldera/projects/usgs/water/impd/$USER
+if [ -z "$SOURCE" ]; then
+  SOURCE=/caldera/projects/usgs/water/impd/$USER
+fi
