Added HRU_DATA_PREFIX and PRMS_DATA_PREFIX.

--- a/nhm.env
+++ b/nhm.env
@@ -10,8 +10,14 @@
 # path to Git-cloned source in containers
 NHM_SOURCE_DIR=/usr/local/src
 
+# HRU shapefile data path prefix
+HRU_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER/ofp
+
 # name of HRU shapefile archive
 HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
+
+# PRMS data path prefix
+PRMS_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER
 
 # name of PRMS data file archive
 PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
