Back-patched logic for working around broken DOI SSL certificate from:
"shifter" branch.

--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -8,9 +8,21 @@ RUN apt-get update && \
     apt-get -y install dialog file gcc gfortran make procps unzip && \
     apt-get autoclean && apt-get purge
 
+# It should only be necessary to set this to "-k" (the
+# "conda update/install ..." option) at certain installations in
+# .usgs.gov where the DOI root SSL certificate has not been installed
+# (e.g., on a VM).
+ARG insecure
+RUN if [ "$insecure" = -k ]; then \
+       wget http://sslhelp.doi.net/docs/DOIRootCA2.cer ; \
+       # see
+       # https://stackoverflow.com/questions/9072376/configure-git-to-accept-a-particular-self-signed-server-certificate-for-a-partic
+       git config --global http.sslCAInfo DOIRootCA2.cer ; \
+    fi
+
 # Update/upgrade Conda
-RUN conda update -n base conda -y && \
-    conda install -n base -c defaults -c conda-forge \
+RUN conda update -n base conda -y $insecure
+RUN conda install -n base -c defaults -c conda-forge $insecure \
       python=3.6 \
       bottleneck=1.2.1 \
       cartopy=0.17.0 \
@@ -26,8 +38,8 @@ RUN conda update -n base conda -y && \
       rasterstats=0.13.1 \
       scipy=1.3.1 \
       xarray=0.13.0 \
-      xmltodict=0.12.0 && \
-    conda clean -a
+      xmltodict=0.12.0
+RUN conda clean -a
 
 ENV SOURCE_DIR=/usr/local/src
 
