--- a/nhm.env
+++ b/nhm.env
@@ -11,13 +11,13 @@
 NHM_SOURCE_DIR=/usr/local/src
 
 # HRU shapefile data path prefix
-HRU_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER/ofp
+HRU_DATA_PREFIX=/home/rmcd/temp
 
 # name of HRU shapefile archive
 HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
 
 # PRMS data path prefix
-PRMS_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER
+PRMS_DATA_PREFIX=/home/rmcd/temp
 
 # name of PRMS data file archive
 PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
@@ -32,13 +32,13 @@ PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DAT
 # data is not typically available until ~2:00 p.m., so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
-GRIDMET_DISABLE=false
+GRIDMET_DISABLE=true
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
 # feasible.
 START_DATE=
-END_DATE=
+END_DATE=2019-10-04
 SAVE_RESTART_DATE=
 
 # When "true", tell the Docker entry-point scripts to print values of
