Added SAVE_RESTART_DATE comment.

--- a/nhm.env
+++ b/nhm.env
@@ -39,6 +39,9 @@ GRIDMET_DISABLE=false
 # feasible.
 START_DATE=
 END_DATE=
+
+# Tell PRMS to save restart info. for a specific date. Included in
+# arguments to PRMS's "-set var_save_file" option.
 SAVE_RESTART_DATE=
 
 # When "true", tell the Docker entry-point scripts to print values of
