--- a/nhm.env
+++ b/nhm.env
@@ -11,43 +11,46 @@
 NHM_SOURCE_DIR=/usr/local/src
 
 # HRU shapefile data path prefix
-HRU_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER/ofp
+# HRU_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER/ofp
+HRU_DATA_PREFIX=/home/rmcd/temp
 
 # name of HRU shapefile archive
-HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
+HRU_DATA_PKG=Data_hru_shp_gfv11_v1.zip
 
 # PRMS data path prefix
-PRMS_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER
+# PRMS_DATA_PREFIX=/caldera/projects/usgs/water/impd/$USER
+PRMS_DATA_PREFIX=/home/rmcd/temp
 
 # name of PRMS data file archive
-PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
+PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1.tar.gz
 
 # HRU shapefile archive URL
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 
 # PRMS data file archive URL
-PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
+PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd//$PRMS_DATA_PKG
 
 # When "true", skip running the gridmet container. Up-to-date Gridmet
 # data is not typically available until ~2:00 p.m., so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
-GRIDMET_DISABLE=false
+GRIDMET_DISABLE=true
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
 # feasible.
 START_DATE=
-END_DATE=
+END_DATE=2020-01-03
 SAVE_RESTART_DATE=
 
 # When "true", tell the Docker entry-point scripts to print values of
 # relevant environment variables to stdout, then exit, without running
 # data processing process in container. Useful for debugging.
-NHM_DRY_RUN=false
+NHM_DRY_RUN=true
 
 # Volume mount source (see
 # https://docs.docker.com/storage/volumes/). The default here is for
 # Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on
 # Docker.
-SOURCE=/caldera/projects/usgs/water/impd/$USER
+# SOURCE=/caldera/projects/usgs/water/impd/$USER
+SOURCE=nhm
