--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -23,22 +23,14 @@ RUN if [ "$insecure" = -k ]; then \
 # Update/upgrade Conda
 RUN conda update -n base conda -y $insecure
 RUN conda install -n base -c defaults -c conda-forge $insecure \
-      python=3.6 \
-      bottleneck=1.2.1 \
-      cartopy=0.17.0 \
-      dask=2.6.0 \
-      geopandas=0.4.1 \
-      jupyter=1.0.0 \
-      matplotlib=3.1.1 \
-      netcdf4=1.4.2 \
-      notebook=5.7.4 \
-      numpy=1.17.2 \
-      pandas=0.25.2 \
-      rasterio=1.0.21 \
-      rasterstats=0.13.1 \
-      scipy=1.3.1 \
-      xarray=0.13.0 \
-      xmltodict=0.12.0
+    python=3.7 \
+    pandas \
+    geopandas \
+    xarray \
+    netcdf4 \
+    requests \
+    dask \
+    nco 
 RUN conda clean -a
 
 ENV NHM_SOURCE_DIR=/usr/local/src
@@ -52,7 +44,7 @@ RUN git -c advice.detachedHead=false clone \
     rm -rf .git && \
     rm .gitignore README.md .project .pydevproject
 
-RUN mkdir -p /nhm/ofp/Output
+RUN mkdir -p /nhm/gridmetetl/Output
 
 ENV USER=nhm
 RUN useradd -ms /bin/bash $USER
