--- a/nhm.env
+++ b/nhm.env
@@ -22,7 +22,7 @@ HRU_DATA_PKG=Data_hru_shp_gfv11_v1.zip
 PRMS_DATA_PREFIX=/home/rmcd/temp
 
 # name of PRMS data file archive
-PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1.tar.gz
+PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1.zip
 
 # HRU shapefile archive URL
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
@@ -40,13 +40,17 @@ GRIDMET_DISABLE=true
 # pipeline run-time to a point where interactive testing is
 # feasible.
 START_DATE=
-END_DATE=2020-01-03
+END_DATE=2020-01-02
 SAVE_RESTART_DATE=
+
+# Variablesw for CBH_FILLER
+CBH_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
+CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
 
 # When "true", tell the Docker entry-point scripts to print values of
 # relevant environment variables to stdout, then exit, without running
 # data processing process in container. Useful for debugging.
-NHM_DRY_RUN=true
+NHM_DRY_RUN=false
 
 # Volume mount source (see
 # https://docs.docker.com/storage/volumes/). The default here is for
