Corrected URL assigned to PRMS_SOURCE:
and updated GRIDMET_DISABLE comment.

--- a/nhm.env
+++ b/nhm.env
@@ -28,10 +28,10 @@ PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1.tar.gz
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 
 # PRMS data file archive URL
-PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd//$PRMS_DATA_PKG
+PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
 
-# When "true", skip running the gridmet container. Up-to-date Gridmet
-# data is not typically available until ~2:00 p.m., so disabling the
+# When "true", skip running the gridmet container. Up-to-date gridMET
+# data is not typically available until 2:45 p.m. PST, so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
 GRIDMET_DISABLE=true
