Corrected typo. in CBH_FILLER comment.

--- a/nhm.env
+++ b/nhm.env
@@ -43,7 +43,7 @@ START_DATE=
 END_DATE=2020-01-02
 SAVE_RESTART_DATE=
 
-# Variablesw for CBH_FILLER
+# Variables for CBH_FILLER
 CBH_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
 CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
 
