Ran to completetion, wrote correct restart file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
       - START_DATE
       - START_TIME
       - RESTART_DATE
+      - VAR_SAVE_FILE
     env_file:
       - nhm.env
     volumes:
