--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -2,10 +2,11 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
-ARG VERSION_TAG_GRIDMET=v0.1
+ARG VERSION_TAG_GRIDMET=master
 
 # check out source from repo.
-RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_GRIDMET \
+RUN git -c advice.detachedHead=false clone --depth=1 \
+    --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/gridmetetl.git \
     $NHM_SOURCE_DIR/gridmetetl
 
