Restored SOURCE environment variable.

--- a/nhm.env
+++ b/nhm.env
@@ -34,6 +34,10 @@ GRIDMET_DISABLE=false
 START_DATE=
 END_DATE=
 
+# Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on	
+# Docker.	
+SOURCE=/caldera/projects/usgs/water/impd/$USER
+
 # Tell PRMS to save restart info. for a specific date. Included in
 # arguments to PRMS's "-set var_save_file" option.
 SAVE_RESTART_DATE=
