--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,14 @@ services:
     env_file:
       - nhm.env
       
-  ofp:
+  gridmetetl:
     build:
-      context: ./nhmusgs-ofp
+      context: ./gridmetetl
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=OFP"
-    image: nhmusgs/ofp
-    container_name: ofp
+    image: nhmusgs/gridmetetl
+    container_name: gridmetetl
     environment:
       - END_DATE
       - HRU_DATA_PKG
