--- a/nhm.env
+++ b/nhm.env
@@ -34,14 +34,14 @@ PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PK
 # data is not typically available until 2:45 p.m. PST, so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
-GRIDMET_DISABLE=true
+GRIDMET_DISABLE=false
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
 # feasible.
 START_DATE=
-END_DATE=2020-01-02
-SAVE_RESTART_DATE=2020-01-02
+END_DATE=
+SAVE_RESTART_DATE=
 VAR_SAVE_FILE=
 
 # Variables for CBH_FILLER
