Restored SOURCE environment variable.

--- a/nhm.env
+++ b/nhm.env
@@ -45,5 +45,9 @@ CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
 # data processing process in container. Useful for debugging.
 NHM_DRY_RUN=false
 
-# Volume mount source (see https://docs.docker.com/storage/volumes/).
+# Volume mount source (see
+# https://docs.docker.com/storage/volumes/). The default here is for
+# Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on
+# Docker.
+# SOURCE=/caldera/projects/usgs/water/impd/$USER
 SOURCE=nhm
