Added OUTPUT_DIR to nhm.env.

--- a/nhm.env
+++ b/nhm.env
@@ -51,3 +51,6 @@ NHM_DRY_RUN=false
 # Docker.
 # SOURCE=/caldera/projects/usgs/water/impd/$USER
 SOURCE=nhm
+
+# The (host machine) directory to save pipeline output to.
+OUTPUT_DIR=.
