in the process of fixing variables.json, decided to move the pull from my fork of onhm-runners and merge it to nhm-usgs.  Updates follow

--- a/nhm.env
+++ b/nhm.env
@@ -14,13 +14,13 @@ NHM_SOURCE_DIR=/usr/local/src
 HRU_DATA_PKG=Data_hru_shp_gfv11_v1.zip
 
 # name of PRMS data file archive
-PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_sf4.zip
+PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_sf5.zip
 
 # HRU shapefile archive URL
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 
 # PRMS data file archive URL
-PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
+PRMS_SOURCE=ftp://ftpint.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
 
 # When "true", skip running the gridmet container. Up-to-date gridMET
 # data is not typically available until 2:45 p.m. PST, so disabling the
