--- a/nhm.env
+++ b/nhm.env
@@ -20,7 +20,7 @@ PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_sf5.zip
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 
 # PRMS data file archive URL
-PRMS_SOURCE=ftp://ftpint.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
+PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
 
 # When "true", skip running the gridmet container. Up-to-date gridMET
 # data is not typically available until 2:45 p.m. PST, so disabling the
