Supply the path to PRMS dataset with a command
Instead of adding the PRMS dataset directory to the end of the
entrypoint. This supplies it via command so it can be changed for each
version of the pipeline.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,8 @@ services:
       - nhm.env
     volumes:
       - nhm:/nhm
+    command:
+      - "/nhm/NHM-PRMS_CONUS_GF_1_1/"
 
   thredds:
     image: unidata/thredds-docker:4.6.13
