Re-named "data_loader" service to "data-loader".

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - nhm.env
 
-  data_loader:
+  data-loader:
     build:
       context: ./nhmusgs-data-loader
       labels:
