--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -38,12 +38,9 @@ ENV NHM_SOURCE_DIR=/usr/local/src
 
 ARG VERSION_ONHM_RUNNERS=0.1.6
 
-RUN git -c advice.detachedHead=false clone \
-    https://github.com/nhm-usgs/onhm-runners.git \
-    --branch $VERSION_ONHM_RUNNERS --depth=1 $NHM_SOURCE_DIR/onhm-runners && \
-    cd $NHM_SOURCE_DIR/onhm-runners && \
-    rm -rf .git && \
-    rm .gitignore README.md .project .pydevproject
+RUN cd $NHM_SOURCE_DIR && wget \
+    https://github.com/nhm-usgs/onhm-runners/archive/$VERSION_ONHM_RUNNERS.tar.gz && \
+    tar -xzf $VERSION_ONHM_RUNNERS.tar.gz && rm $VERSION_ONHM_RUNNERS.tar.gz
 
 RUN mkdir -p /nhm/gridmetetl/Output
 
