--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,25 +31,25 @@ services:
     volumes:
       - nhm:/nhm
 
-  gridmet:
+  gridmetpoll:
     build:
-      context: ./nhmusgs-gridmet
+      context: ./nhmusgs-gridmetpoll
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=Gridmet Query"
-    image: nhmusgs/gridmet
-    container_name: gridmet
+    image: nhmusgs/gridmetpoll
+    container_name: gridmetpoll
     env_file:
       - nhm.env
       
-  ofp:
+  gridmetetl:
     build:
-      context: ./nhmusgs-ofp
+      context: ./nhmusgs-gridmetetl
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
-        - "gov.usgs.nhm.image.docker.type=OFP"
-    image: nhmusgs/ofp
-    container_name: ofp
+        - "gov.usgs.nhm.image.docker.type=GRIDMETETL"
+    image: nhmusgs/gridmetetl
+    container_name: gridmetetl
     environment:
       - CBH_IDIR
       - START_DATE
