Re-wrote installation of gridmetetl.

--- a/nhmusgs-gridmet-current/Dockerfile
+++ b/nhmusgs-gridmet-current/Dockerfile
@@ -2,16 +2,17 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
-ARG VERSION_TAG_GRIDMET=v0.25
+ARG VERSION_TAG_GRIDMETETL=v0.25
 
-# check out source from repo.
-RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_GRIDMET \
-    https://github.com/nhm-usgs/gridmetetl.git \
-    $NHM_SOURCE_DIR/gridmetetl
+RUN wget -P $NHM_SOURCE_DIR https://github.com/nhm-usgs/gridmetetl/archive/$VERSION_TAG_GRIDMETETL.tar.gz
+RUN cd $NHM_SOURCE_DIR && tar -xvzf $VERSION_TAG_GRIDMETETL.tar.gz
+# not sure why it's necessary to omit the "v" from "0.25" here, but it is
+RUN mv $NHM_SOURCE_DIR/gridmetetl-0.25 $NHM_SOURCE_DIR/gridmetetl
+RUN rm $NHM_SOURCE_DIR/$VERSION_TAG_GRIDMETETL.tar.gz
 
 USER $USER
 
 WORKDIR $NHM_SOURCE_DIR
 
 ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "gridmetetl/gridmetetl/Gridmet_current.py"]
+  ["/opt/conda/bin/python", "-u", "/usr/local/src/gridmetetl/gridmetetl/Gridmet_current.py"]
