Re-named GRIDMET_DISABLE to GRIDMET_CURRENT_DISABLE.

--- a/nhm.env
+++ b/nhm.env
@@ -22,11 +22,11 @@ HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 # PRMS data file archive URL
 PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
 
-# When "true", skip running the gridmet container. Up-to-date gridMET
-# data is not typically available until 2:45 p.m. PST, so disabling the
-# gridmet container can be useful in development to prevent the
-# pipeline from stopping at this step with an error.
-GRIDMET_DISABLE=false
+# When "true", skip running the gridmet-current container. Up-to-date
+# gridMET data is not typically available until 2:45 p.m. PST, so
+# disabling the gridmet-current container can be useful in development
+# to prevent the pipeline from stopping at this step with an error.
+GRIDMET_CURRENT_DISABLE=false
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
