--- a/nhm.env
+++ b/nhm.env
@@ -7,20 +7,8 @@
 # Author - Andrew Halper
 #
 
-# path to Git-cloned source in containers
+# path to Git-tagged source location in containers
 NHM_SOURCE_DIR=/usr/local/src
-
-# name of HRU shapefile archive
-HRU_DATA_PKG=Data_hru_shp_gfv11_v1.zip
-
-# name of PRMS data file archive
-PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_v5.1.0.4.zip
-
-# HRU shapefile archive URL
-HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
-
-# PRMS data file archive URL
-PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PKG
 
 # When "true", skip running the gridmet-current container. Up-to-date
 # gridMET data is not typically available until 2:45 p.m. PST, so
