Changed pattern of Slurm .out files for easier debugging.

--- a/nhm.env
+++ b/nhm.env
@@ -37,8 +37,7 @@ NHM_DRY_RUN=false
 # https://docs.docker.com/storage/volumes/). The default here is for
 # Shifter on HPC. Use named volume (e.g. SOURCE=nhm) when running on
 # Docker.
-# SOURCE=/caldera/projects/usgs/water/impd/$USER
-SOURCE=nhm
+SOURCE=/caldera/projects/usgs/water/impd/$USER
 
 # The (host machine) directory to save pipeline output to.
 OUTPUT_DIR=.
